<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
            android:id="@+id/main_inf"
            android:orderInCategory="98"
            android:title="@string/main_inf"
            app:showAsAction="never">
    </item>
    <item
            android:id="@+id/conf"
            android:orderInCategory="99"
            android:title="@string/conf"
            app:showAsAction="never">
    </item>
    <item
        android:id="@+id/pref"
        android:orderInCategory="100"
        android:title="@string/pref"
        app:showAsAction="never">
    </item>
    <item
            android:id="@+id/about"
            android:orderInCategory="101"
            android:title="@string/about"
            app:showAsAction="never">
    </item>
</menu>