<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff1a1917"
    tools:context=".GeneralInfoActivity">

    <!-- Вставляем пустой слой чтобы на нем был фокус -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvLastSaveTime"
        android:id="@+id/tvLastSaveTime" android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:layout_marginBottom="5dp"/>
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bUpd" android:src="@mipmap/ic_bupd"
        android:layout_marginLeft="5dp"
        android:background="#00ffffff" android:layout_marginBottom="5dp"
        android:layout_gravity="top|left" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollViewMain">
        <TableLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:gravity="top" android:layout_gravity="top">

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#cd535353" android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Номер устройства:"
                    android:id="@+id/textView8"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/tvPhoneArdGenInf"
                    android:layout_column="2"
                    android:layout_gravity="center_vertical|right"
                    android:text="@string/tvPhoneArdGenInf"
                    android:textSize="14dp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Имя устройства:"
                    android:id="@+id/textView9"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/tvNameAdrGenInf"
                    android:layout_column="2"
                    android:layout_gravity="center_vertical|right"
                    android:text="@string/tvNameArdGenInf"
                    android:textSize="14dp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Адрес устройства:"
                    android:id="@+id/textView10"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/tvAddressArdGenInf"
                    android:layout_column="2"
                    android:layout_gravity="center_vertical|right"
                    android:text="@string/tvAddressArdGenInf"
                    android:textSize="14dp" />
            </TableRow>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#cd535353" android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tvSensorOneName"
                    android:id="@+id/tvSensorOneName"
                    android:layout_marginLeft="10dp" android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/tvSensorOneVal" android:layout_column="2"
                    android:text="@string/tvSensorOneVal" android:layout_gravity="center_vertical|right"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tvSensorTwoName"
                    android:id="@+id/tvSensorTwoName"
                    android:layout_gravity="center_vertical" android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/tvSensorTwoVal"
                    android:id="@+id/tvSensorTwoVal" android:layout_column="2"
                    android:layout_gravity="center_vertical|right"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tvSensorThreeName"
                    android:id="@+id/tvSensorThreeName"
                    android:layout_marginLeft="10dp" android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/tvSensorThreeVal" android:layout_column="2"
                    android:text="@string/tvSensorThreeVal" android:layout_gravity="center_vertical|right"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tvSensorFourName"
                    android:id="@+id/tvSensorFourName"
                    android:layout_marginLeft="10dp" android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/tvSensorFourVal"
                    android:id="@+id/tvSensorFourVal" android:layout_column="2"
                    android:layout_gravity="center_vertical|right"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tvSensorFiveName"
                    android:id="@+id/tvSensorFiveName"
                    android:layout_marginLeft="10dp" android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/tvSensorFiveVal"
                    android:id="@+id/tvSensorFiveVal" android:layout_column="2"
                    android:layout_gravity="center_vertical|right"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tvSensorSixName"
                    android:id="@+id/tvSensorSixName" android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp" android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/tvSensorSixVal"
                    android:id="@+id/tvSensorSixVal" android:layout_column="2" android:layout_gravity="center_vertical|right"/>
            </TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#cd535353" android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
        </TableLayout>
    </ScrollView>

</LinearLayout>

